feature add AppUtilsTest and FireStationRootIT clean of the code with SonarLint