@@ -7,7 +7,7 @@ import static org.mockito.Mockito.verify;
 
 import com.gpot.fr.safetynet.dto.PersonDto;
 import com.gpot.fr.safetynet.repository.PersonRepository;
-import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -15,7 +15,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
-public class PersonServiceImpTest {
+class PersonServiceImpTest {
 
   @InjectMocks
   private PersonServiceImp service;
@@ -55,7 +55,7 @@ public class PersonServiceImpTest {
 
   @Test
   void itShouldFindPersonByAddressList() {
-    assertDoesNotThrow(() -> service.findPersonByAddressList(Collections.singletonList("address")));
+    assertDoesNotThrow(() -> service.findPersonByAddressList(List.of("address")));
     verify(repository).findPersonByAddressList(anyList());
   }
 
@@ -67,7 +67,7 @@ public class PersonServiceImpTest {
 
   @Test
   void findPhoneByStationList() {
-    assertDoesNotThrow(() -> service.findPhoneByStationList(Collections.singletonList("address")));
+    assertDoesNotThrow(() -> service.findPhoneByStationList(List.of("address")));
     verify(repository).findPhoneByStation(anyList());
   }
 
